tests/ui/rfcs/rfc-2632-const-trait-impl/const_derives/derive-const-use.stderr
error[E0635]: unknown feature `const_default_impls`
  --> $DIR/derive-const-use.rs:3:5
   |
LL |     const_default_impls, derive_const)]
   |     ^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0635`.
